# magic_box

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: magic_box_client.launch  magic_box_client_demo.launch  magic_box_master.launch
pysrc/magic_box/display/: EInkDisplay.py
pysrc/magic_box/nodes/: MagicBox.py  MagicBoxDemo.py  MagicBoxMaster.py  nodeconfig.py
scripts/: magic_box_client  magic_box_client_demo  magic_box_master
srv/: ChangeBoxID.srv  DeRegisterMagicBox.srv  GetActiveID.srv  RegisterMagicBox.srv  SetNewBoxId.srv
